--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -213,6 +213,13 @@
             display: flex;
         }
 
+        /* must set size for carousel images */
+        .card-img-top {
+            width: 100%;
+            height: 17vw;
+            object-fit: cover;
+        }
+
     </style>
     <!-- /////////////////////////////////  copy this in every file  ///////////////////////////////// -->
 
@@ -363,7 +370,7 @@
     <header class="navigation bg-light shadow-sm fixed-top">
         <div id="nav-scroll-fade-in" class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand d-none d-sm-block me-3 me-xl-4 flex-shrink-0" href="../home.html">
+                <a class="navbar-brand d-none d-sm-block me-3 me-xl-4 flex-shrink-0" th:href="@{/home}">
                     <img th:src="@{/img/logo/GentleGourmetLogo2.png}" width="300" alt="Gentle Gourmet">
                 </a>
 
@@ -386,14 +393,14 @@
                 <!-- Cook & Our Story links -->
                 <div class="nav-padding">
                     <!-- a link -->
-                    <a href="cook/recipe-list.html">
+                    <a th:href="@{/recipe-list}">
                         <!-- icon -->
                         <i class="ci-avocado bg-faded-primary"></i>
                         <h6 style="color:darkslategrey">Cook</h6>
                     </a>
                 </div>
                 <div class="nav-padding">
-                    <a href="story/story.html">
+                    <a th:href="@{/story}">
                         <i class="ci-broccoli"></i>
                         <h6 style="color:darkslategrey">Story</h6>
                     </a>
@@ -849,135 +856,29 @@
                         <div class="tns-carousel-inner" data-carousel-options='{&quot;mode&quot;: "carousel", &quot;autoplay&quot;: true, &quot;speed&quot;:2000, &quot;items&quot;:4, &quot;gutter&quot;:40, &quot;control&quot;: true, &quot;autoHeight&quot;: true, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1}, &quot;480&quot;:{&quot;items&quot;:2}, &quot;720&quot;:{&quot;items&quot;:3}, &quot;991&quot;:{&quot;items&quot;:2}, &quot;1140&quot;:{&quot;items&quot;:3}, &quot;1300&quot;:{&quot;items&quot;:4}}}'>
                             <!--  here, need a for-loop to fetch top 5 most sold items to print out -->
 
-                            <!-- Product-->
-                            <div>
-                                <div class="rounded-border card product-card card-static pb-3">
-                                    <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                    <a class="card-img-top d-block overflow-hidden" href="product/product.html">
-                                        <!-- use the retrieved product's image location as parameter to the link.. ie. ../save/product/{imgLoc} -->
-<!--                                        <img th:src="@{save/product/product1.png}" alt="Product">-->
-                                        <img src="https://s3-ap-northeast-2.amazonaws.com/gentle-gourmet/product/product1.png" alt="Image from AWS S3">
-                                    </a>
-                                    <div class="card-body py-2">
-                                        <a class="product-meta d-block fs-xs pb-1" href="#">{ 상품 카테고리 }</a>
-                                        <h3 class="product-title fs-sm text-truncate">
-                                            <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                            <a href="product/product.html">{ 상품 이름 }</a>
-                                        </h3>
-                                        <div class="product-price">
-                                            <span class="text-accent">₩{ 상품 가격 }</span>
-                                        </div>
-                                    </div>
-                                    <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
-                                    <div class="product-floating-btn">
-                                        <a href="product/product.html">
-                                            <button class="btn btn-success btn-shadow btn-sm" type="button">+<i
-                                                    class="ci-cart fs-base ms-1"></i></button>
+                            <!-- List Top 5 Products-->
+                            <div th:each="product : ${bestsellerProducts}">
+                                <div>
+                                    <div class="rounded-border card product-card card-static pb-3">
+                                        <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
+                                        <a class="card-img-top d-block overflow-hidden" th:href="@{/product/{productId}(productId=${product.id})}">
+                                            <img th:src="${product.productThumbnailPath}">
                                         </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="rounded-border card product-card card-static pb-3">
-                                    <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                    <a class="card-img-top d-block overflow-hidden" href="product/product.html">
-                                        <!-- use the retrieved product's image location as parameter to the link.. ie. ../save/product/{imgLoc} -->
-                                        <img th:src="@{save/product/product1.png}" alt="Product">
-                                    </a>
-                                    <div class="card-body py-2">
-                                        <a class="product-meta d-block fs-xs pb-1" href="#">{ 상품 카테고리 }</a>
-                                        <h3 class="product-title fs-sm text-truncate">
-                                            <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                            <a href="product/product.html">{ 상품 이름 }</a>
-                                        </h3>
-                                        <div class="product-price">
-                                            <span class="text-accent">₩{ 상품 가격 }</span>
+                                        <div class="card-body py-2">
+                                            <a class="product-meta d-block fs-xs pb-1" th:href="@{/product/{productId}(productId=${product.id})}">[[${product.category.name}]]</a>
+                                            <h3 class="product-title fs-sm text-truncate">
+                                                <a th:href="@{/product/{productId}(productId=${product.id})}">[[${product.name}]]</a>
+                                            </h3>
+                                            <div class="product-price">
+                                                <span class="text-accent">₩[[${product.price}]]</span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
-                                    <div class="product-floating-btn">
-                                        <a href="product/product.html">
-                                            <button class="btn btn-success btn-shadow btn-sm" type="button">+<i
-                                                    class="ci-cart fs-base ms-1"></i></button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="rounded-border card product-card card-static pb-3">
-                                    <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                    <a class="card-img-top d-block overflow-hidden" href="product/product.html">
-                                        <!-- use the retrieved product's image location as parameter to the link.. ie. ../save/product/{imgLoc} -->
-                                        <img th:src="@{save/product/product1.png}" alt="Product">
-                                    </a>
-                                    <div class="card-body py-2">
-                                        <a class="product-meta d-block fs-xs pb-1" href="#">{ 상품 카테고리 }</a>
-                                        <h3 class="product-title fs-sm text-truncate">
-                                            <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                            <a href="product/product.html">{ 상품 이름 }</a>
-                                        </h3>
-                                        <div class="product-price">
-                                            <span class="text-accent">₩{ 상품 가격 }</span>
+                                        <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
+                                        <div class="product-floating-btn">
+                                            <a th:href="@{/add-to-cart/{productId}(productId=${product.id})}">
+                                                <button class="btn btn-success btn-shadow btn-sm" type="button">+<i class="ci-cart fs-base ms-1"></i></button>
+                                            </a>
                                         </div>
-                                    </div>
-                                    <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
-                                    <div class="product-floating-btn">
-                                        <a href="product/product.html">
-                                            <button class="btn btn-success btn-shadow btn-sm" type="button">+<i
-                                                    class="ci-cart fs-base ms-1"></i></button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="rounded-border card product-card card-static pb-3">
-                                    <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                    <a class="card-img-top d-block overflow-hidden" href="product/product.html">
-                                        <!-- use the retrieved product's image location as parameter to the link.. ie. ../save/product/{imgLoc} -->
-                                        <img th:src="@{save/product/product1.png}" alt="Product">
-                                    </a>
-                                    <div class="card-body py-2">
-                                        <a class="product-meta d-block fs-xs pb-1" href="#">{ 상품 카테고리 }</a>
-                                        <h3 class="product-title fs-sm text-truncate">
-                                            <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                            <a href="product/product.html">{ 상품 이름 }</a>
-                                        </h3>
-                                        <div class="product-price">
-                                            <span class="text-accent">₩{ 상품 가격 }</span>
-                                        </div>
-                                    </div>
-                                    <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
-                                    <div class="product-floating-btn">
-                                        <a href="product/product.html">
-                                            <button class="btn btn-success btn-shadow btn-sm" type="button">+<i
-                                                    class="ci-cart fs-base ms-1"></i></button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="rounded-border card product-card card-static pb-3">
-                                    <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                    <a class="card-img-top d-block overflow-hidden" href="product/product.html">
-                                        <!-- use the retrieved product's image location as parameter to the link.. ie. ../save/product/{imgLoc} -->
-                                        <img th:src="@{save/product/product1.png}" alt="Product">
-                                    </a>
-                                    <div class="card-body py-2">
-                                        <a class="product-meta d-block fs-xs pb-1" href="#">{ 상품 카테고리 }</a>
-                                        <h3 class="product-title fs-sm text-truncate">
-                                            <!-- use the retrieved product's productId as parameter to the link.. ie. product/products?productId=? -->
-                                            <a href="product/product.html">{ 상품 이름 }</a>
-                                        </h3>
-                                        <div class="product-price">
-                                            <span class="text-accent">₩{ 상품 가격 }</span>
-                                        </div>
-                                    </div>
-                                    <!-- add an anchor and in the anchor, use the retrieved product's productId as param to get product/{productId} page-->
-                                    <div class="product-floating-btn">
-                                        <a href="product/product.html">
-                                            <button class="btn btn-success btn-shadow btn-sm" type="button">+<i
-                                                    class="ci-cart fs-base ms-1"></i></button>
-                                        </a>
                                     </div>
                                 </div>
                             </div>
