--- a/src/main/resources/templates/product/brand.html
+++ b/src/main/resources/templates/product/brand.html
@@ -170,7 +170,7 @@
       }
 
       #theVideo {
-        /*background-image: url('../assets/img/logo/GentleGourmetLogo_darkbg.jpg');*/
+        /*background: url('../assets/img/logo/GentleGourmetLogo_darkbg.jpg');*/
         width: 100% !important;
         height: auto !important;
         margin-bottom: -30px;
@@ -526,7 +526,6 @@
     </header>
 
   </div> <!-- nav-bar stikcy position ends -->
-
 
   <!-- Tag cloud widget: tags for popular search keywords-->
   <div id="popular-tags" class="widget">
@@ -1003,7 +1002,7 @@
   <!-- Main theme script-->
   <script src="/js/theme.min.js"></script>
     <!-- Main theme script-->
-    <script src="../../static/js/theme.min.js"></script>
+    <script src="/js/theme.min.js"></script>
   </body>
 
 
