--- a/src/main/resources/templates/story/story.html
+++ b/src/main/resources/templates/story/story.html
@@ -74,7 +74,7 @@
         /* Section Top */
         .section-top {
             min-height: 600px;
-            background: url('/static/img/background/bg18.jpg') no-repeat center center/cover;
+            background: url('/img/background/bg18.jpg') no-repeat center center/cover;
         }
 
         .section-top h1 {
@@ -94,7 +94,7 @@
             min-height: 900px;
 
             /*put a small veggie png here */
-            background: url('/static/img/story/storybg2.png') no-repeat center center/cover;
+            background: url('/img/story/storybg2.png') no-repeat center center/cover;
             background-size: 400px;
             background-position: 300px;
         }
@@ -185,8 +185,8 @@
     </section>
 
     <section class="section section-stream">
-        <a href="/home">
-            <img src="/static/img/logo/GentleGourmetLogo.png" alt="GentleGourmet" class="play rellax" data-rellax-speed="-4">
+        <a th:href="@{/home}">
+            <img th:src="@{/img/logo/GentleGourmetLogo.png}" alt="GentleGourmet" class="play rellax" data-rellax-speed="-4">
             <h1 class="play rellax" data-rellax-speed="-4">홈페이지 바로가기</h1>
         </a>
 
@@ -210,25 +210,25 @@
                 비건 "에그"
                 <span class="secondary-text dot">.</span>
             </h2>
-            <img src="/static/img/story/justegg.png">
+            <img th:src="@{/img/story/justegg.png}">
         </div>
 
         <div class="rellax" data-rellax-speed="-3">
             <i class="fa-solid fa-leaf fa-3x secondary-text"></i>
             <h2>비건 "우유" <span class="secondary-text dot">.</span></h2>
-            <img src="/static/img/story/oatly.png">
+            <img th:src="@{/img/story/oatly.png}">
         </div>
 
         <div class="rellax" data-rellax-speed="-4">
             <i class="fa-solid fa-kiwi-fruit fa-3x secondary-text"></i>
             <h2>비건 너겟 <span class="secondary-text dot">.</span></h2>
-            <img src="/static/img/story/nugget2.png">
+            <img th:src="@{/img/story/nugget2.png}">
         </div>
 
         <div class="rellax" data-rellax-speed="-6">
             <i class="fa-solid fa-broccoli fa-3x secondary-text"></i>
             <h2>비건 패티 등<span class="secondary-text dot">..</span></h2>
-            <img src="/static/img/story/beyondmeat.png">
+            <img th:src="@{/img/story/beyondmeat.png}">
         </div>
     </section>
 
