--- a/src/main/resources/templates/product/brand.html
+++ b/src/main/resources/templates/product/brand.html
@@ -14,7 +14,17 @@
     <link rel="stylesheet" media="screen" th:href="@{/css/theme.min.css}">
 
     <style type="text/css">
+      /* add custom font (1) */
+      @font-face {
+        font-family: 'yg-jalnan';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+      }
+
       body {
+        /* add custom font (2) */
+        font-family: "yg-jalnan", "sans-serif" !important;
         z-index: 0
       }
 
