--- a/src/main/resources/templates/story/story.html
+++ b/src/main/resources/templates/story/story.html
@@ -17,8 +17,17 @@
             padding: 0;
         }
 
+        /* add custom font (1) */
+        @font-face {
+            font-family: 'yg-jalnan';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         body {
-            font-family: 'Montserrat', sans-serif;
+            /* add custom font (2) */
+            font-family: "yg-jalnan", "sans-serif" !important;
             background: var(--primary-color);
             color: #fff;
             font-size: 18px;
